# tmaskills

./: README.md
.claude/skills/code-review/: SKILL.md
.claude/skills/code-review/references/: anti-patterns.md  best-practices.md  javascript-security.md  owasp-top-10.md  python-security.md  security-checklist.md
.claude/skills/code-review/scripts/: dependency_check.py  secret_detector.py  security_scan.py
.claude/skills/fastapi-builder/: SKILL.md
.claude/skills/fastapi-builder/assets/templates/: config.py  (+6 more)
.claude/skills/fastapi-builder/references/: anti-patterns.md  best-practices.md  cors-security.md  crud-patterns.md  dependency-injection.md  error-handling.md  models-vs-schemas.md  project-structure.md  validation-patterns.md
.claude/skills/pytest-tdd/: SKILL.md
.claude/skills/pytest-tdd/assets/templates/: .coveragerc  conftest.py  pyproject.toml  pytest.ini  test_async.py  test_example.py
.claude/skills/pytest-tdd/references/: aaa-pattern.md  anti-patterns.md  async-testing.md  best-practices.md  coverage.md  fixtures.md  mocking.md  parametrization.md  security-testing.md  tdd-workflow.md  test-organization.md
.claude/skills/sqlmodel-database/: SKILL.md
.claude/skills/sqlmodel-database/references/: anti-patterns.md  best-practices.md  crud-operations.md  database-setup.md  fastapi-integration.md  migrations.md  models.md  queries.md  relationships.md
.claude/skills/web-theme-builder/: SKILL.md  requirements.txt
.claude/skills/web-theme-builder/references/: accessibility.md  color-systems.md  component-library.md  design-principles.md  error-handling.md  responsive-patterns.md  security.md  tailwind-config.md  testing.md  theme-selection-guide.md  theme-variations.md  typography-guide.md
.claude/skills/web-theme-builder/scripts/: component_builder.py  palette_generator.py  theme_generator.py
task-management-api/: .gitignore  README.md  coverage.xml  pyproject.toml  pytest.ini  requirements.txt
task-management-api/app/: main.py
task-management-api/app/api/: deps.py
task-management-api/app/api/v1/: api.py
task-management-api/app/api/v1/endpoints/: __init__.py  tasks.py
task-management-api/app/core/: config.py  database.py
task-management-api/app/crud/: __init__.py  task.py
task-management-api/app/exceptions/: __init__.py  handlers.py
task-management-api/app/models/: task.py
task-management-api/app/schemas/: task.py
task-management-api/tests/: README.md  conftest.py
task-management-api/tests/integration/: test_tasks_create.py  test_tasks_delete.py  test_tasks_read.py  test_tasks_update.py  test_validation_errors.py
task-management-api/tests/unit/: README.md  test_crud_task.py  test_models.py  test_schemas.py
(+22 files in other folders)
