[tool.poetry]
name = "task-management-api"
version = "1.0.0"
description = "A production-grade Task Management API built with FastAPI and SQLModel"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlmodel = "^0.0.14"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.2"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (with dependencies)",
    "slow: Slow tests (may take more time)",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
