[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "myapp"
version = "0.1.0"
description = "My Python Application"
requires-python = ">=3.8"
dependencies = [
    # Add your dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
    "pytest-xdist>=3.0",  # For parallel test execution
]

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=myapp",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

# Markers
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (with dependencies)",
    "functional: Functional/E2E tests",
    "slow: Slow running tests",
    "smoke: Smoke tests (critical functionality)",
]

# Async configuration
asyncio_mode = "auto"

[tool.coverage.run]
source = ["myapp"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
